--- a/translations/admin+intl-icu.fr.xlf
+++ b/translations/admin+intl-icu.fr.xlf
@@ -4611,5 +4611,16 @@
         <target>La liste blanche n’a pas de note</target>
       </segment>
     </unit>
+    <unit id="l1Pew6d" name="Alle bannen">
+      <notes>
+        <note category="german">Alle bannen</note>
+        <note category="from">twig:///templates/ajax/admin/users/multi_index.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Alle bannen</source>
+        <target>Alle bannen</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
