--- a/translations/global+intl-icu.en.xlf
+++ b/translations/global+intl-icu.en.xlf
@@ -3670,7 +3670,7 @@
     <unit id="MNOavAj" name="Das Zombie Survival Game!">
       <notes>
         <note category="german">Das Zombie Survival Game!</note>
-        <note category="from">twig:///templates/seo/framework.html.twig;twig:///templates/web/framework.html.twig;twig:///templates/web/pm-host.html.twig</note>
+        <note category="from">twig:///templates/seo/framework.html.twig;twig:///templates/web/attract.html.twig;twig:///templates/web/framework.html.twig;twig:///templates/web/pm-host.html.twig</note>
       </notes>
       <segment>
         <source>Das Zombie Survival Game!</source>
@@ -3751,7 +3751,7 @@
     <unit id="rtPvko.">
       <notes>
         <note category="german">Dies ist ein Fan-Projekt für die Spiele {dv}, {d2n}, {hordes} und {zn} von &lt;b&gt;MotionTwin&lt;/b&gt;.</note>
-        <note category="from">twig:///templates/seo/framework.html.twig;twig:///templates/web/framework.html.twig</note>
+        <note category="from">twig:///templates/seo/framework.html.twig;twig:///templates/web/attract.html.twig;twig:///templates/web/framework.html.twig</note>
       </notes>
       <segment>
         <source>Dies ist ein Fan-Projekt für die Spiele {dv}, {d2n}, {hordes} und {zn} von &lt;b&gt;MotionTwin&lt;/b&gt;.</source>
@@ -3761,7 +3761,7 @@
     <unit id="XQQqX1B">
       <notes>
         <note category="german">All Grafiken stammen aus diesen Spielen, wenn nicht explizit anders angegeben, und sind damit Eigentum von &lt;b&gt;MotionTwin&lt;/b&gt;</note>
-        <note category="from">twig:///templates/seo/framework.html.twig;twig:///templates/web/framework.html.twig</note>
+        <note category="from">twig:///templates/seo/framework.html.twig;twig:///templates/web/attract.html.twig;twig:///templates/web/framework.html.twig</note>
       </notes>
       <segment>
         <source>All Grafiken stammen aus diesen Spielen, wenn nicht explizit anders angegeben, und sind damit Eigentum von &lt;b&gt;MotionTwin&lt;/b&gt;</source>
@@ -3771,7 +3771,7 @@
     <unit id="3DaiPcH">
       <notes>
         <note category="german">MyHordes ist &lt;i&gt;Open Source&lt;/i&gt; und jeder ist zur &lt;b&gt;Mitwirkung&lt;/b&gt; eingeladen. Du findest den Quellcode bei {gitlab}.</note>
-        <note category="from">twig:///templates/seo/framework.html.twig;twig:///templates/web/framework.html.twig</note>
+        <note category="from">twig:///templates/seo/framework.html.twig;twig:///templates/web/attract.html.twig;twig:///templates/web/framework.html.twig</note>
       </notes>
       <segment>
         <source>MyHordes ist &lt;i&gt;Open Source&lt;/i&gt; und jeder ist zur &lt;b&gt;Mitwirkung&lt;/b&gt; eingeladen. Du findest den Quellcode bei {gitlab}.</source>
@@ -3781,7 +3781,7 @@
     <unit id="nWYafS5">
       <notes>
         <note category="german">MyHordes ist ein Teil des {etwin} Projekts, du kannst uns auf {opencollective} mit einer Spende unterstützen.</note>
-        <note category="from">twig:///templates/seo/framework.html.twig;twig:///templates/web/framework.html.twig</note>
+        <note category="from">twig:///templates/seo/framework.html.twig;twig:///templates/web/attract.html.twig;twig:///templates/web/framework.html.twig</note>
       </notes>
       <segment>
         <source>MyHordes ist ein Teil des {etwin} Projekts, du kannst uns auf {opencollective} mit einer Spende unterstützen.</source>
@@ -3791,7 +3791,7 @@
     <unit id="yyNYNPS" name="Programmierung">
       <notes>
         <note category="german">Programmierung</note>
-        <note category="from">twig:///templates/seo/framework.html.twig;twig:///templates/web/framework.html.twig</note>
+        <note category="from">twig:///templates/seo/framework.html.twig;twig:///templates/web/attract.html.twig;twig:///templates/web/framework.html.twig</note>
       </notes>
       <segment>
         <source>Programmierung</source>
@@ -3801,7 +3801,7 @@
     <unit id="q_Mqx8l" name="Danke an">
       <notes>
         <note category="german">Danke an</note>
-        <note category="from">twig:///templates/seo/framework.html.twig;twig:///templates/web/framework.html.twig</note>
+        <note category="from">twig:///templates/seo/framework.html.twig;twig:///templates/web/attract.html.twig;twig:///templates/web/framework.html.twig</note>
       </notes>
       <segment>
         <source>Danke an</source>
