FR Translation in admin

--- a/translations/admin+intl-icu.fr.xlf
+++ b/translations/admin+intl-icu.fr.xlf
@@ -4619,7 +4619,7 @@
       </notes>
       <segment>
         <source>Alle bannen</source>
-        <target>Alle bannen</target>
+        <target>Bannir tous</target>
       </segment>
     </unit>
   </file>
