Renamed Black Cervical Oozing name in ES/DE/EN

--- a/translations/items+intl-icu.de.xlf
+++ b/translations/items+intl-icu.de.xlf
@@ -5302,7 +5302,7 @@
     <unit id="P9ubaaO" name="Schwarzer Zervixschleim">
       <segment>
         <source>Schwarzer Zervixschleim</source>
-        <target>Schwarzer Zervixschleim</target>
+        <target>Schwarzer Nackenwirbelschleim</target>
       </segment>
     </unit>
     <unit id="M3k3jYb">
