--- a/translations/items+intl-icu.en.xlf
+++ b/translations/items+intl-icu.en.xlf
@@ -8501,7 +8501,7 @@
       </notes>
       <segment>
         <source>Schwarzer Zervixschleim</source>
-        <target>Black Cervical Oozing</target>
+        <target>Black Neck Ooze</target>
       </segment>
     </unit>
     <unit id="M3k3jYb">
