--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -8482,7 +8482,7 @@
       </notes>
       <segment>
         <source>Schwarzer Zervixschleim</source>
-        <target>Exudación Cervical Negra</target>
+        <target>Moco de cuello negro</target>
       </segment>
     </unit>
     <unit id="M3k3jYb">
