--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -8477,7 +8477,7 @@
     </unit>
     <unit id="P9ubaaO" name="Schwarzer Zervixschleim">
       <notes>
-        <note category="german">Schwarzer Zervixschleim</note>
+        <note category="german">Schwarzer Nackenwirbelschleim</note>
         <note category="from">db://ItemPrototype</note>
       </notes>
       <segment>
