--- a/translations/items+intl-icu.fr.xlf
+++ b/translations/items+intl-icu.fr.xlf
@@ -8478,7 +8478,7 @@
     </unit>
     <unit id="P9ubaaO" name="Schwarzer Zervixschleim">
       <notes>
-        <note category="german">Schwarzer Zervixschleim</note>
+        <note category="german">Schwarzer Nackenwirbelschleim</note>
         <note category="from">db://ItemPrototype</note>
       </notes>
       <segment>
