--- a/translations/welcome+intl-icu.fr.xlf
+++ b/translations/welcome+intl-icu.fr.xlf
@@ -138,7 +138,7 @@
       </notes>
       <segment>
         <source>MyHordes ist ein &lt;strong&gt;kooperatives Zombie-Survival-Game&lt;/strong&gt; in einer postapokalyptischen Welt voller &lt;strong&gt;Untoter&lt;/strong&gt;! Spiele in der Gemeinschaft oder überlebe als Einzelgänger...</source>
-        <target><![CDATA[Hordes est le <strong>premier jeu de survie gratuit</strong> dans un monde hostile peuplé de <strong>zombies</strong> ! Jouez en communauté ou vivez en solitaire...]]></target>
+        <target><![CDATA[MyHordes est le <strong>premier jeu de survie gratuit</strong> dans un monde hostile peuplé de <strong>zombies</strong> ! Jouez en communauté ou vivez en solitaire...]]></target>
       </segment>
     </unit>
     <unit id="3Q.JU78" name="Spielhilfe">
@@ -266,7 +266,6 @@
       <notes>
         <note category="german">Das Online-Spiel &lt;strong&gt;MyHordes&lt;/strong&gt; ist ein kooperatives Survival Game, das in einer postapokalyptischen Welt voller Zombies spielt.</note>
         <note category="from">twig:///templates/ajax/public/about.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Das Online-Spiel &lt;strong&gt;MyHordes&lt;/strong&gt; ist ein kooperatives Survival Game, das in einer postapokalyptischen Welt voller Zombies spielt.</source>
@@ -277,7 +276,6 @@
       <notes>
         <note category="german">Das Prinzip</note>
         <note category="from">twig:///templates/ajax/public/about.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Das Prinzip</source>
@@ -288,7 +286,6 @@
       <notes>
         <note category="german">Die Welt nach der Apokalypse: Die Zivilisation, wie wir sie kannten, ist nicht mehr. Die letzten Menschen verschanzen sich in Städten und haben nur ein Ziel: Überleben. Du bist einer von 40 Bürgern und musst in einer von Zombies umzingelten Stadt jeden Tag um dein Überleben kämpfen. Ziel des Spiels ist es, allein oder in der Gruppe so lange wie möglich zu überleben.</note>
         <note category="from">twig:///templates/ajax/public/about.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Die Welt nach der Apokalypse: Die Zivilisation, wie wir sie kannten, ist nicht mehr. Die letzten Menschen verschanzen sich in Städten und haben nur ein Ziel: Überleben. Du bist einer von 40 Bürgern und musst in einer von Zombies umzingelten Stadt jeden Tag um dein Überleben kämpfen. Ziel des Spiels ist es, allein oder in der Gruppe so lange wie möglich zu überleben.</source>
@@ -299,7 +296,6 @@
       <notes>
         <note category="german">Die Gemeinschaft</note>
         <note category="from">twig:///templates/ajax/public/about.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Die Gemeinschaft</source>
@@ -310,7 +306,6 @@
       <notes>
         <note category="german">Kooperation und Kommunikation stehen im Mittelpunkt von "MyHordes". Wenn ihr lange überleben wollt, müsst ihr zusammenarbeiten. Ganz egal, ob ihr euch leiden könnt oder nicht. Wer sich nicht an vereinbarte Regeln hält, kann verbannt und sogar gehängt werden. Ihr müsst euch absprechen und eure knappen Ressourcen bestmöglich nutzen. Jede Stadt stellt dabei ihre eigenen Regeln auf, denn bei "MyHordes" gilt das Motto:</note>
         <note category="from">twig:///templates/ajax/public/about.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Kooperation und Kommunikation stehen im Mittelpunkt von "MyHordes". Wenn ihr lange überleben wollt, müsst ihr zusammenarbeiten. Ganz egal, ob ihr euch leiden könnt oder nicht. Wer sich nicht an vereinbarte Regeln hält, kann verbannt und sogar gehängt werden. Ihr müsst euch absprechen und eure knappen Ressourcen bestmöglich nutzen. Jede Stadt stellt dabei ihre eigenen Regeln auf, denn bei "MyHordes" gilt das Motto:</source>
@@ -321,7 +316,6 @@
       <notes>
         <note category="german">Es gilt nur die Moral, die du selbst wählst!</note>
         <note category="from">twig:///templates/ajax/public/about.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Es gilt nur die Moral, die du selbst wählst!</source>
@@ -332,7 +326,6 @@
       <notes>
         <note category="german">Der Ablauf</note>
         <note category="from">twig:///templates/ajax/public/about.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Der Ablauf</source>
@@ -343,7 +336,6 @@
       <notes>
         <note category="german">Mit Aktionspunkten hast du jeden Tag eine bestimmte Anzahl an Aktionen. Durch Essen, Trinken oder die Einnahme von Drogen kannst du deine Aktionspunkte wieder auffüllen. Nutze deine Aktionspunkte mit Bedacht! Du kannst in die Wüste zu gehen und nach Gegenständen und Rohstoffen für den Bau von Verteidigungsbauten suchen. Oder du hilft in der Werkstatt oder auf der Baustelle. Jeden Tag um Mitternacht greift eine immer größer werdende Zombiehorde an. Überlebt eure Stadt dieses Angriff, beginnt ein neuer Tag und der tägliche Kampf ums Überleben geht in eine weitere Runde.</note>
         <note category="from">twig:///templates/ajax/public/about.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Mit Aktionspunkten hast du jeden Tag eine bestimmte Anzahl an Aktionen. Durch Essen, Trinken oder die Einnahme von Drogen kannst du deine Aktionspunkte wieder auffüllen. Nutze deine Aktionspunkte mit Bedacht! Du kannst in die Wüste zu gehen und nach Gegenständen und Rohstoffen für den Bau von Verteidigungsbauten suchen. Oder du hilft in der Werkstatt oder auf der Baustelle. Jeden Tag um Mitternacht greift eine immer größer werdende Zombiehorde an. Überlebt eure Stadt dieses Angriff, beginnt ein neuer Tag und der tägliche Kampf ums Überleben geht in eine weitere Runde.</source>
@@ -354,7 +346,6 @@
       <notes>
         <note category="german">Das Ende</note>
         <note category="from">twig:///templates/ajax/public/about.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Das Ende</source>
@@ -365,7 +356,6 @@
       <notes>
         <note category="german">Je besser ihr euch absprecht, desto länger überlebt eure Stadt. Doch ihr Schicksal ist unausweichlich und bereits besiegelt. Der Tod ist Teil von "MyHordes". Doch mit jeder gespielten Stadt lernst du mehr über das Spiel und darüber wie eine erfolgreiche Gemeinschaft funktioniert. Und vielleicht auch über dich... Die erfolgreichsten Städte und Spieler erscheinen in einer Saison-Rangliste.</note>
         <note category="from">twig:///templates/ajax/public/about.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Je besser ihr euch absprecht, desto länger überlebt eure Stadt. Doch ihr Schicksal ist unausweichlich und bereits besiegelt. Der Tod ist Teil von "MyHordes". Doch mit jeder gespielten Stadt lernst du mehr über das Spiel und darüber wie eine erfolgreiche Gemeinschaft funktioniert. Und vielleicht auch über dich... Die erfolgreichsten Städte und Spieler erscheinen in einer Saison-Rangliste.</source>
@@ -376,7 +366,6 @@
       <notes>
         <note category="german">Der Preis</note>
         <note category="from">twig:///templates/ajax/public/about.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Der Preis</source>
@@ -387,7 +376,6 @@
       <notes>
         <note category="german">Das Spielen von "MyHordes" ist &lt;strong&gt;komplett kostenlos&lt;/strong&gt;! Es gibt keine kostenpflichtigen Zusatzinhalte, kosmetische Boni oder Spielfortschritts-Beschleuniger. Wir setzen zudem keine Werbung oder Tracking ein. Wenn dir "MyHordes" gefällt hast du die Möglichkeit, für den Weiterbetrieb zu spenden - du erhälst hierfür (außer unserer ewigen Dankbarkeit) jedoch keinerlei Spielboni.</note>
         <note category="from">twig:///templates/ajax/public/about.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Das Spielen von "MyHordes" ist &lt;strong&gt;komplett kostenlos&lt;/strong&gt;! Es gibt keine kostenpflichtigen Zusatzinhalte, kosmetische Boni oder Spielfortschritts-Beschleuniger. Wir setzen zudem keine Werbung oder Tracking ein. Wenn dir "MyHordes" gefällt hast du die Möglichkeit, für den Weiterbetrieb zu spenden - du erhälst hierfür (außer unserer ewigen Dankbarkeit) jedoch keinerlei Spielboni.</source>
