Added missing FR Translation on welcome page

--- a/translations/welcome+intl-icu.fr.xlf
+++ b/translations/welcome+intl-icu.fr.xlf
@@ -259,7 +259,7 @@
       </notes>
       <segment>
         <source>Weiterlesen</source>
-        <target>Weiterlesen</target>
+        <target>Lire la suite</target>
       </segment>
     </unit>
     <unit id="sFZmH_I">
