An other missing FR Translation on welcome page

--- a/translations/welcome+intl-icu.fr.xlf
+++ b/translations/welcome+intl-icu.fr.xlf
@@ -420,7 +420,7 @@
       </notes>
       <segment>
         <source>Neuigkeiten bei MyHordes</source>
-        <target>Neuigkeiten bei MyHordes</target>
+        <target>Actualités de MyHordes</target>
       </segment>
     </unit>
     <unit id=".5j3wzq" name="Spielen!">
