Fixed FR Translations for coalesced citizens

--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -15389,7 +15389,7 @@
       </notes>
       <segment>
         <source>Kleine Koalitionen</source>
-        <target>Petites coalitions</target>
+        <target>Ciotyens coalisés</target>
       </segment>
     </unit>
     <unit id="aGs0YSI" name="Die verfluchten Schriften">
