Fixed EN search button text

--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -1896,7 +1896,7 @@
       </notes>
       <segment>
         <source>In dieser Zone graben</source>
-        <target>Search</target>
+        <target>Search the area</target>
       </segment>
     </unit>
     <unit id="K5c71RM" name="Nächste automatische Ausgrabung:">
