--- a/translations/items+intl-icu.fr.xlf
+++ b/translations/items+intl-icu.fr.xlf
@@ -8649,12 +8649,12 @@
     <unit id="GUA4Vaf">
       <notes>
         <note category="german">Schlechte Nachrichten, du hättest das nicht herunterschlucken sollen... du hast dir eine Infektion eingefangen!</note>
-        <note category="state">new</note>
+        <note category="state">madeup</note>
         <note category="from">php:///src/Service/ActionHandler.php</note>
       </notes>
       <segment>
         <source>Schlechte Nachrichten, du hättest das nicht herunterschlucken sollen... du hast dir eine Infektion eingefangen!</source>
-        <target>Schlechte Nachrichten, du hättest das nicht herunterschlucken sollen... du hast dir eine Infektion eingefangen!</target>
+        <target>Mauvaise nouvelle, vous n'auriez peut-être pas dû l'avaler... Vous avez été infecté(e) !</target>
       </segment>
     </unit>
     <unit id="gf4WieX">
@@ -8810,12 +8810,12 @@
     <unit id="S3AHAPf" name="Hierfür brauchst du mindestens 5 AP.">
       <notes>
         <note category="german">Hierfür brauchst du mindestens 5 AP.</note>
-        <note category="state">new</note>
+        <note category="state">madeup</note>
         <note category="from">db://Requirement</note>
       </notes>
       <segment>
         <source>Hierfür brauchst du mindestens 5 AP.</source>
-        <target>Hierfür brauchst du mindestens 5 AP.</target>
+        <target>Pour faire cela, vous avez besoin d’au moins 5 PA.</target>
       </segment>
     </unit>
     <unit id="ndUWcPR" name="Deine unselige Infektion wurde kuriert!">
@@ -8831,12 +8831,12 @@
     <unit id="793QxjT" name="Hierfür brauchst du mindestens 1 PM.">
       <notes>
         <note category="german">Hierfür brauchst du mindestens 1 MP.</note>
-        <note category="state">new</note>
+        <note category="state">madeup</note>
         <note category="from">db://Requirement</note>
       </notes>
       <segment>
         <source>Hierfür brauchst du mindestens 1 PM.</source>
-        <target>Hierfür brauchst du mindestens 1 PM.</target>
+        <target>Pour faire cela, vous avez besoin d’au moins 1 MP.</target>
       </segment>
     </unit>
     <unit id="42uqd50">
@@ -9137,22 +9137,21 @@
       <notes>
         <note category="german">Expedition</note>
         <note category="from">db://ItemCategory</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Expedition</source>
-        <target>Expedition</target>
+        <target>Expédition</target>
       </segment>
     </unit>
     <unit id="TWuwK4M" name="Angriff und Verteidigung">
       <notes>
         <note category="german">Angriff und Verteidigung</note>
         <note category="from">db://ItemCategory</note>
-        <note category="state">new</note>
+        <note category="state">madeup</note>
       </notes>
       <segment>
         <source>Angriff und Verteidigung</source>
-        <target>Angriff und Verteidigung</target>
+        <target>Attaque et défense</target>
       </segment>
     </unit>
     <unit id="5MlxE2I" name="Gegenstand verwenden">
